fix: image from stretching on larger screens

--- a/app/_components/gallery-hero/index.module.css
+++ b/app/_components/gallery-hero/index.module.css
@@ -1,13 +1,17 @@
 /* // TODO: different screen size styling!!! */
 .heroContainer {
+  height: 100vh;
+  position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .image {
-  position: relative;
-  height: 100vh;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .textOverlay {
